section da democracia corinthiana

--- a/src/index.html
+++ b/src/index.html
@@ -42,10 +42,11 @@
             </div>
         </section>
 
+        <!-- story-section -->
         <section class="story-section">
             <div class="container story-container">
-                
-                <div class="text-content story-text">
+
+                <div class="text-container story-text">
                     <div class="title-container story-title">
                         <h1>HISTÓRIA</h1>
                     </div>
@@ -60,6 +61,37 @@
                 <figure class="img-content story-img">
                     <img src="img/first_team.png" alt="primeiro time do Corinthians">
                 </figure>
+            </div>
+        </section>
+
+        <section class="democracia-section">
+            <div class="container democ-container">
+                <figure class="img-content democ-img">
+                    <img src="img/socrates.png" alt="jogador socrates">
+                </figure>
+
+                <div class="text-container democ-text">
+                    <div class="title-container democ-title">
+                        <h2>Democracia corinthiana</h2>
+                    </div>
+
+                    <div class="txtContent democ-txtContent">
+                        <p>
+                            A Democracia Corinthiana foi um movimento ocorrido no início da década de 1980, que teve a luta pelo fim da ditadura militar no Brasil como uma das principais bandeiras. Sócrates, Wladimir, Casagrande, Zenon e outros ex-atletas do Timão participaram da campanha pela volta do direito ao voto para presidente, o que não acontecia desde 1960.
+                        </p>
+
+                        <p>
+                            Neste período, o Corinthians conquistou os títulos do Paulistão de 1982 e 1983. No segundo ano, antes da final contra o São Paulo, no Morumbi, os jogadores entraram em campo com uma faixa com os dizeres: "Ganhar ou perder, mas sempre com democracia".
+                        </p>
+
+                        <p>
+                            Em 1984, Sócrates prometeu que só deixaria o Corinthians para atuar no exterior se a Emenda Dante de Oliveira não fosse aprovada. Essa proposta de mudança da lei tinha por objetivo reinstaurar as eleições diretas para presidente da República no Brasil. Embora aprovada pela maioria da população na época, a emenda foi reprovada em votação no Congresso.
+                        </p>
+
+                        <p>
+                            Então, Sócrates se transferiu para a Fiorentina, da Itália, e a Democracia Corinthiana foi perdendo força. Os maus resultados do time em campo, a criação do Clube dos 13 e outras mudanças no elenco minaram o movimento. A derrota de Adilson Monteiro Alves nas eleições do clube em 1985 selou o fim do período dentro do clube.                        </p>
+                    </div>
+                </div>
             </div>
         </section>
 
