formataçao da section de titulos

--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,7 @@
             </div>
         </section>
 
+        <!-- democracia-section -->
         <section class="democracia-section">
             <div class="container democ-container">
                 <figure class="img-content democ-img">
@@ -94,6 +95,121 @@
                 </div>
             </div>
         </section>
+
+        <!-- titulos-section -->
+        <section class="titulos-section">
+            <div class="container titulos-container">
+
+                <div class="text-container titulos-text">
+                    <div class="title-container titulos-title">
+                        <span>
+                            <h1>3</h1>
+                        </span>
+                        <h1>
+                            MAIORES TÍTULOS DO CORINTHIANS
+                        </h1>
+                    </div>
+
+                    <div class="txtContent">
+                        <p>
+                            7 vezes campeão brasileiro, dono de três Copas do Brasil, dois Mundiais de Clubes, uma Libertadores e outros títulos.  Dentro de toda a trajetória de vitórias e títulos do Corinthians, quais seriam os três mais relevantes?                        
+                        </p>
+                    </div>
+                </div>
+
+                <div class="titItems-container">
+                    
+                    <!-- titulo 01 - paulistao 1977 -->
+                    <div class="titBox titItem-01"> 
+                        <div class="borderShadow"></div>
+
+                        <div class="titBox-content">
+                            <figure>
+                                <img src="img/paulistao-1977.png" alt="Time Corinthians vencedor do paulistao de 1977">
+                            </figure>
+
+                            <div class="text-container titBox-text">
+                                <div class="title-container titBox-title">
+                                    <h1>PAULISTÃO</h1>
+                                </div>
+
+                                <div class="txtContent titBox-txtContent">
+                                    <p>
+                                        O gol de Basílio garantiu o 1 x 0 do Timão sobre a Ponte Preta, encerrando os 22 anos de período de vacas magras que tanto atormentava a Fiel.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="titStick"></div>
+
+                        <span class="titDate">
+                            <p>1977</p>
+                        </span>
+                    </div>
+
+                    <!-- titulo 02 - libertadores 2012 -->
+                    <div class="titBox titItem-02"> 
+                        <div class="borderShadow"></div>
+
+                        <div class="titBox-content">
+                            <figure>
+                                <img src="img/libertadores-2012.png" alt="Time Corinthians vencedor da Libertadores de 2012">
+                            </figure>
+
+                            <div class="text-container titBox-text">
+                                <div class="title-container titBox-title">
+                                    <h1>LIBERTADORES</h1>
+                                </div>
+
+                                <div class="txtContent titBox-txtContent">
+                                    <p>
+                                        O Timão colecionava frustrações na Libertadores. Mas a longa espera finalmente terminou. O Corinthians de Tite conquistou o torneio de forma invicta.                           
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="titStick"></div>
+
+                        <span class="titDate">
+                            <p>2012</p>
+                        </span>
+                    </div>
+
+                    <!-- titulo 03 - mundial 2012 -->
+                    <div class="titBox titItem-03"> 
+                        <div class="borderShadow"></div>
+
+                        <div class="titBox-content">
+                            <figure>
+                                <img src="img/mundial-2012.png" alt="Time Corinthians vencedor do mundial de 2012">
+                            </figure>
+
+                            <div class="text-container titBox-text">
+                                <div class="title-container titBox-title">
+                                    <h1>MUNDIAL</h1>
+                                </div>
+
+                                <div class="txtContent titBox-txtContent">
+                                    <p>
+                                        O Corinthians já havia conquistado o Mundial de 2000, mas faltava ir ao torneio como o atual campeão da Libertadores.                      
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="titStick"></div>
+
+                        <span class="titDate">
+                            <p>2012</p>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        
 
     </div>
 </body>
