tentando adicionar audio de fundo

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,11 @@
         <!-- header-section -->
         <section class="header-section">
             <div class="container header-container">
+
+                <audio autoplay>
+                    <source src="audio/o_jogo_do_hepta_do_recebimento_ao_titulo_arrepia_a_festa_que_a_fiel_fez_1673402425478620931.mp3" type="audio/mpeg">
+                </audio>
+
                 <div class="redes-container">
                     <div class="redesStick">
                         <div class="halfStick"></div>
@@ -299,8 +304,7 @@
     
                     <div class="txtContent">
                         <p>
-                            O time atualmente conta com uma escalação com 3 zagueiros e os laterais de ala.
-                            Grandes nomes como o de Cáso, Fagner e Guedes compõem o time. A formação valoriza a marcação e facilidade no passe de bola.                    
+                            Grandes nomes como o de Cássio, Fagner e Guedes compõem o time. As formações valorizam a marcação e facilidade no passe de bola.                    
                         </p>
                     </div>
                 </div>
